parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> np_program_0 program_class MAIN np_program_1 class_block np_program_2
Rule 2     program_class -> CLASS ID np_program_1 prog_inh class_block program_class
Rule 3     program_class -> empty
Rule 4     prog_inh -> INHERITS ID
Rule 5     prog_inh -> empty
Rule 6     np_program_0 -> <empty>
Rule 7     np_program_1 -> <empty>
Rule 8     np_program_2 -> <empty>
Rule 9     var_decl -> vars
Rule 10    var_decl -> vector
Rule 11    var_decl -> matrix
Rule 12    class_block -> { class_blck_body }
Rule 13    class_blck_body -> class_vars class_asgs class_func
Rule 14    class_blck_body -> class_func
Rule 15    class_vars -> access var_decl more_class_vars
Rule 16    more_class_vars -> class_vars
Rule 17    more_class_vars -> empty
Rule 18    class_asgs -> assignment class_asgs
Rule 19    class_asgs -> empty
Rule 20    class_func -> method class_func
Rule 21    class_func -> empty
Rule 22    access -> acc_scope np_access_1 acc_dependent
Rule 23    acc_scope -> PUBLIC
Rule 24    acc_scope -> PRIVATE
Rule 25    acc_dependent -> INDEPENDENT np_access_2
Rule 26    acc_dependent -> np_access_3
Rule 27    np_access_1 -> <empty>
Rule 28    np_access_2 -> <empty>
Rule 29    np_access_3 -> <empty>
Rule 30    method_access -> met_acc_scope np_method_access_1 met_acc_dependent
Rule 31    met_acc_scope -> PUBLIC_FUNC
Rule 32    met_acc_scope -> PRIVATE_FUNC
Rule 33    met_acc_dependent -> INDEPENDENT np_method_access_2
Rule 34    met_acc_dependent -> np_method_access_3
Rule 35    np_method_access_1 -> <empty>
Rule 36    np_method_access_2 -> <empty>
Rule 37    np_method_access_3 -> <empty>
Rule 38    ids -> ID np_ids_1 m_ids
Rule 39    m_ids -> , ids
Rule 40    m_ids -> empty
Rule 41    np_ids_1 -> <empty>
Rule 42    vars -> VAR ids : vars_type ; np_vars_3
Rule 43    vars_type -> type np_vars_1 vars_tp_a
Rule 44    vars_type -> ID np_vars_2 vars_tp_b
Rule 45    vars_tp_a -> = np_vars_4 expression np_vars_5
Rule 46    vars_tp_a -> empty
Rule 47    vars_tp_b -> = vars_assgn
Rule 48    vars_tp_b -> empty
Rule 49    vars_assgn -> create_obj
Rule 50    vars_assgn -> expression
Rule 51    np_vars_1 -> <empty>
Rule 52    np_vars_2 -> <empty>
Rule 53    np_vars_3 -> <empty>
Rule 54    np_vars_4 -> <empty>
Rule 55    np_vars_5 -> <empty>
Rule 56    vec_mat_type -> type
Rule 57    vec_mat_type -> ID np_vec_mat_type_1
Rule 58    np_vec_mat_type_1 -> <empty>
Rule 59    vector -> VEC ids : vec_mat_type [ CONST_I ] np_vector_1 vec_assgn ; np_vector_2
Rule 60    vec_assgn -> = vector_exp
Rule 61    vec_assgn -> empty
Rule 62    np_vector_1 -> <empty>
Rule 63    np_vector_2 -> <empty>
Rule 64    matrix -> MAT ids : vec_mat_type [ CONST_I , CONST_I ] np_matrix_1 mat_assgn ; np_matrix_2
Rule 65    mat_assgn -> = matrix_exp
Rule 66    mat_assgn -> empty
Rule 67    np_matrix_1 -> <empty>
Rule 68    np_matrix_2 -> <empty>
Rule 69    id_access -> id_mat_acc id_var_acc
Rule 70    id_mat_acc -> mat_vec_access
Rule 71    id_mat_acc -> empty
Rule 72    id_var_acc -> . np_id_access_1 ID id_mat_acc
Rule 73    id_var_acc -> empty
Rule 74    np_id_access_1 -> <empty>
Rule 75    assignment -> this ID np_assignment_1 id_access = np_assignment_2 ass_value ;
Rule 76    ass_value -> create_obj
Rule 77    ass_value -> expression np_assignment_3
Rule 78    ass_value -> matrix_exp
Rule 79    ass_value -> vector_exp
Rule 80    np_assignment_1 -> <empty>
Rule 81    np_assignment_2 -> <empty>
Rule 82    np_assignment_3 -> <empty>
Rule 83    this -> THIS np_this_1 .
Rule 84    this -> np_this_2
Rule 85    np_this_1 -> <empty>
Rule 86    np_this_2 -> <empty>
Rule 87    vector_exp -> [ vec_elem ]
Rule 88    vec_elem -> vec_object vec_more
Rule 89    vec_object -> create_obj
Rule 90    vec_object -> expression
Rule 91    vec_more -> , vec_elem
Rule 92    vec_more -> empty
Rule 93    matrix_exp -> { mat_elem }
Rule 94    mat_elem -> vector_exp mat_more
Rule 95    mat_more -> , mat_elem
Rule 96    mat_more -> empty
Rule 97    mat_vec_access -> [ mat_vec_index mat_access ]
Rule 98    mat_vec_index -> _
Rule 99    mat_vec_index -> expression
Rule 100   mat_access -> , mat_vec_index
Rule 101   mat_access -> empty
Rule 102   method -> func_spec ( np_method_5 opt_method_param ) np_method_6 block np_method_7
Rule 103   func_spec -> method_access func_type ID np_method_4
Rule 104   func_spec -> CONSTRUCTOR np_method_1
Rule 105   func_type -> VOID np_method_2
Rule 106   func_type -> type
Rule 107   func_type -> ID np_method_3
Rule 108   np_method_1 -> <empty>
Rule 109   np_method_2 -> <empty>
Rule 110   np_method_3 -> <empty>
Rule 111   np_method_4 -> <empty>
Rule 112   np_method_5 -> <empty>
Rule 113   np_method_6 -> <empty>
Rule 114   np_method_7 -> <empty>
Rule 115   opt_method_param -> method_param
Rule 116   opt_method_param -> empty
Rule 117   method_param -> ID np_method_param_1 : param_type param_mat_vec np_method_param_6 more_params
Rule 118   more_params -> , method_param
Rule 119   more_params -> empty
Rule 120   param_type -> type
Rule 121   param_type -> ID np_method_param_2
Rule 122   param_mat_vec -> [ param_mat ]
Rule 123   param_mat_vec -> np_method_param_3
Rule 124   param_mat -> CONST_I , CONST_I np_method_param_5
Rule 125   param_mat -> CONST_I np_method_param_4
Rule 126   np_method_param_1 -> <empty>
Rule 127   np_method_param_2 -> <empty>
Rule 128   np_method_param_3 -> <empty>
Rule 129   np_method_param_4 -> <empty>
Rule 130   np_method_param_5 -> <empty>
Rule 131   np_method_param_6 -> <empty>
Rule 132   create_obj -> NEW func_call
Rule 133   func_call -> np_func_call_1 ( func_param np_func_call_3 ) np_func_call_4
Rule 134   func_param -> expression np_func_call_2 more_fpar
Rule 135   more_fpar -> , func_param
Rule 136   more_fpar -> empty
Rule 137   np_func_call_1 -> <empty>
Rule 138   np_func_call_2 -> <empty>
Rule 139   np_func_call_3 -> <empty>
Rule 140   np_func_call_4 -> <empty>
Rule 141   block -> { bstmt }
Rule 142   bstmt -> statement bstmt
Rule 143   bstmt -> empty
Rule 144   statement -> assignment
Rule 145   statement -> condition
Rule 146   statement -> loop
Rule 147   statement -> in_out
Rule 148   statement -> return
Rule 149   statement -> this ID np_statement_1 func_call ;
Rule 150   statement -> var_decl
Rule 151   np_statement_1 -> <empty>
Rule 152   condition -> IF cond_body np_condition_4
Rule 153   cond_body -> ( expression ) np_condition_1 block cond_else
Rule 154   cond_else -> np_condition_2 ELSE block
Rule 155   cond_else -> np_condition_2 ELSEIF cond_body
Rule 156   cond_else -> np_condition_3
Rule 157   np_condition_1 -> <empty>
Rule 158   np_condition_2 -> <empty>
Rule 159   np_condition_3 -> <empty>
Rule 160   np_condition_4 -> <empty>
Rule 161   loop -> for_loop
Rule 162   loop -> while_loop
Rule 163   for_loop -> FOR ( assignment np_for_loop_1 expression np_for_loop_2 ; ID = expression np_for_loop_3 ) block np_for_loop_4
Rule 164   np_for_loop_1 -> <empty>
Rule 165   np_for_loop_2 -> <empty>
Rule 166   np_for_loop_3 -> <empty>
Rule 167   np_for_loop_4 -> <empty>
Rule 168   while_loop -> WHILE np_while_loop_1 ( expression ) np_while_loop_2 block np_while_loop_3
Rule 169   np_while_loop_1 -> <empty>
Rule 170   np_while_loop_2 -> <empty>
Rule 171   np_while_loop_3 -> <empty>
Rule 172   in_out -> PRINT ( print_exp ) ;
Rule 173   in_out -> SCAN ( ID np_in_out_2 id_access ) ;
Rule 174   print_exp -> expression np_in_out_1 print_more
Rule 175   print_more -> , print_exp
Rule 176   print_more -> empty
Rule 177   np_in_out_1 -> <empty>
Rule 178   np_in_out_2 -> <empty>
Rule 179   return -> RETURN ret_val ;
Rule 180   ret_val -> expression np_return_1
Rule 181   ret_val -> np_return_2
Rule 182   np_return_1 -> <empty>
Rule 183   np_return_2 -> <empty>
Rule 184   expression -> rel_expression np_expression_1 expression_op
Rule 185   expression_op -> AND np_expression_2 expression
Rule 186   expression_op -> OR np_expression_2 expression
Rule 187   expression_op -> XOR np_expression_2 expression
Rule 188   expression_op -> empty
Rule 189   np_expression_1 -> <empty>
Rule 190   np_expression_2 -> <empty>
Rule 191   rel_expression -> rel_expression_1 np_rel_expression_1 rel_exp_op
Rule 192   rel_exp_op -> EQUAL np_rel_expression_2 rel_expression
Rule 193   rel_exp_op -> NOT_EQUAL np_rel_expression_2 rel_expression
Rule 194   rel_exp_op -> empty
Rule 195   np_rel_expression_1 -> <empty>
Rule 196   np_rel_expression_2 -> <empty>
Rule 197   rel_expression_1 -> exp np_rel_expression_1_1 rel_exp_1_op
Rule 198   rel_exp_1_op -> < np_rel_expression_1_2 rel_expression_1
Rule 199   rel_exp_1_op -> LESS_EQUAL_THAN np_rel_expression_1_2 rel_expression_1
Rule 200   rel_exp_1_op -> > np_rel_expression_1_2 rel_expression_1
Rule 201   rel_exp_1_op -> GREATER_EQUAL_THAN np_rel_expression_1_2 rel_expression_1
Rule 202   rel_exp_1_op -> empty
Rule 203   np_rel_expression_1_1 -> <empty>
Rule 204   np_rel_expression_1_2 -> <empty>
Rule 205   exp -> term np_exp_1 exp_op
Rule 206   exp_op -> + np_exp_2 exp
Rule 207   exp_op -> - np_exp_2 exp
Rule 208   exp_op -> empty
Rule 209   np_exp_1 -> <empty>
Rule 210   np_exp_2 -> <empty>
Rule 211   term -> factor np_term_1 term_op
Rule 212   term_op -> * np_term_2 term
Rule 213   term_op -> / np_term_2 term
Rule 214   term_op -> % np_term_2 term
Rule 215   term_op -> empty
Rule 216   np_term_1 -> <empty>
Rule 217   np_term_2 -> <empty>
Rule 218   type -> INT np_type_1
Rule 219   type -> DOUBLE np_type_1
Rule 220   type -> CHAR np_type_1
Rule 221   type -> BOOL np_type_1
Rule 222   np_type_1 -> <empty>
Rule 223   var_cte -> CONST_I np_var_cte_1
Rule 224   var_cte -> CONST_F np_var_cte_2
Rule 225   var_cte -> CONST_CHAR np_var_cte_3
Rule 226   var_cte -> CONST_STRING np_var_cte_4
Rule 227   var_cte -> CONST_BOOL np_var_cte_5
Rule 228   np_var_cte_1 -> <empty>
Rule 229   np_var_cte_2 -> <empty>
Rule 230   np_var_cte_3 -> <empty>
Rule 231   np_var_cte_4 -> <empty>
Rule 232   np_var_cte_5 -> <empty>
Rule 233   factor -> fact_neg fact_body np_factor_7
Rule 234   fact_neg -> - np_factor_2
Rule 235   fact_neg -> ~ np_factor_3
Rule 236   fact_neg -> empty
Rule 237   fact_body -> ( np_factor_4 expression ) np_factor_5
Rule 238   fact_body -> var_cte np_factor_6
Rule 239   fact_body -> this ID np_factor_1 fact_id
Rule 240   fact_id -> np_factor_9 func_call
Rule 241   fact_id -> np_factor_8 id_access
Rule 242   np_factor_1 -> <empty>
Rule 243   np_factor_2 -> <empty>
Rule 244   np_factor_3 -> <empty>
Rule 245   np_factor_4 -> <empty>
Rule 246   np_factor_5 -> <empty>
Rule 247   np_factor_6 -> <empty>
Rule 248   np_factor_7 -> <empty>
Rule 249   np_factor_8 -> <empty>
Rule 250   np_factor_9 -> <empty>
Rule 251   empty -> <empty>

Terminals, with rules where they appear

%                    : 214
(                    : 102 133 153 163 168 172 173 237
)                    : 102 133 153 163 168 172 173 237
*                    : 212
+                    : 206
,                    : 39 64 91 95 100 118 124 135 175
-                    : 207 234
.                    : 72 83
/                    : 213
:                    : 42 59 64 117
;                    : 42 59 64 75 149 163 172 173 179
<                    : 198
=                    : 45 47 60 65 75 163
>                    : 200
AND                  : 185
BOOL                 : 221
CHAR                 : 220
CLASS                : 2
CONSTRUCTOR          : 104
CONST_BOOL           : 227
CONST_CHAR           : 225
CONST_F              : 224
CONST_I              : 59 64 64 124 124 125 223
CONST_STRING         : 226
DOUBLE               : 219
ELSE                 : 154
ELSEIF               : 155
EQUAL                : 192
FOR                  : 163
GREATER_EQUAL_THAN   : 201
ID                   : 2 4 38 44 57 72 75 103 107 117 121 149 163 173 239
IF                   : 152
INDEPENDENT          : 25 33
INHERITS             : 4
INT                  : 218
LESS_EQUAL_THAN      : 199
MAIN                 : 1
MAT                  : 64
NEW                  : 132
NOT_EQUAL            : 193
OR                   : 186
PRINT                : 172
PRIVATE              : 24
PRIVATE_FUNC         : 32
PUBLIC               : 23
PUBLIC_FUNC          : 31
RETURN               : 179
SCAN                 : 173
THIS                 : 83
VAR                  : 42
VEC                  : 59
VOID                 : 105
WHILE                : 168
XOR                  : 187
[                    : 59 64 87 97 122
]                    : 59 64 87 97 122
_                    : 98
error                : 
{                    : 12 93 141
}                    : 12 93 141
~                    : 235

Nonterminals, with rules where they appear

acc_dependent        : 22
acc_scope            : 22
access               : 15
ass_value            : 75
assignment           : 18 144 163
block                : 102 153 154 163 168
bstmt                : 141 142
class_asgs           : 13 18
class_blck_body      : 12
class_block          : 1 2
class_func           : 13 14 20
class_vars           : 13 16
cond_body            : 152 155
cond_else            : 153
condition            : 145
create_obj           : 49 76 89
empty                : 3 5 17 19 21 40 46 48 61 66 71 73 92 96 101 116 119 136 143 176 188 194 202 208 215 236
exp                  : 197 206 207
exp_op               : 205
expression           : 45 50 77 90 99 134 153 163 163 168 174 180 185 186 187 237
expression_op        : 184
fact_body            : 233
fact_id              : 239
fact_neg             : 233
factor               : 211
for_loop             : 161
func_call            : 132 149 240
func_param           : 133 135
func_spec            : 102
func_type            : 103
id_access            : 75 173 241
id_mat_acc           : 69 72
id_var_acc           : 69
ids                  : 39 42 59 64
in_out               : 147
loop                 : 146
m_ids                : 38
mat_access           : 97
mat_assgn            : 64
mat_elem             : 93 95
mat_more             : 94
mat_vec_access       : 70
mat_vec_index        : 97 100
matrix               : 11
matrix_exp           : 65 78
met_acc_dependent    : 30
met_acc_scope        : 30
method               : 20
method_access        : 103
method_param         : 115 118
more_class_vars      : 15
more_fpar            : 134
more_params          : 117
np_access_1          : 22
np_access_2          : 25
np_access_3          : 26
np_assignment_1      : 75
np_assignment_2      : 75
np_assignment_3      : 77
np_condition_1       : 153
np_condition_2       : 154 155
np_condition_3       : 156
np_condition_4       : 152
np_exp_1             : 205
np_exp_2             : 206 207
np_expression_1      : 184
np_expression_2      : 185 186 187
np_factor_1          : 239
np_factor_2          : 234
np_factor_3          : 235
np_factor_4          : 237
np_factor_5          : 237
np_factor_6          : 238
np_factor_7          : 233
np_factor_8          : 241
np_factor_9          : 240
np_for_loop_1        : 163
np_for_loop_2        : 163
np_for_loop_3        : 163
np_for_loop_4        : 163
np_func_call_1       : 133
np_func_call_2       : 134
np_func_call_3       : 133
np_func_call_4       : 133
np_id_access_1       : 72
np_ids_1             : 38
np_in_out_1          : 174
np_in_out_2          : 173
np_matrix_1          : 64
np_matrix_2          : 64
np_method_1          : 104
np_method_2          : 105
np_method_3          : 107
np_method_4          : 103
np_method_5          : 102
np_method_6          : 102
np_method_7          : 102
np_method_access_1   : 30
np_method_access_2   : 33
np_method_access_3   : 34
np_method_param_1    : 117
np_method_param_2    : 121
np_method_param_3    : 123
np_method_param_4    : 125
np_method_param_5    : 124
np_method_param_6    : 117
np_program_0         : 1
np_program_1         : 1 2
np_program_2         : 1
np_rel_expression_1  : 191
np_rel_expression_1_1 : 197
np_rel_expression_1_2 : 198 199 200 201
np_rel_expression_2  : 192 193
np_return_1          : 180
np_return_2          : 181
np_statement_1       : 149
np_term_1            : 211
np_term_2            : 212 213 214
np_this_1            : 83
np_this_2            : 84
np_type_1            : 218 219 220 221
np_var_cte_1         : 223
np_var_cte_2         : 224
np_var_cte_3         : 225
np_var_cte_4         : 226
np_var_cte_5         : 227
np_vars_1            : 43
np_vars_2            : 44
np_vars_3            : 42
np_vars_4            : 45
np_vars_5            : 45
np_vec_mat_type_1    : 57
np_vector_1          : 59
np_vector_2          : 59
np_while_loop_1      : 168
np_while_loop_2      : 168
np_while_loop_3      : 168
opt_method_param     : 102
param_mat            : 122
param_mat_vec        : 117
param_type           : 117
print_exp            : 172 175
print_more           : 174
prog_inh             : 2
program              : 0
program_class        : 1 2
rel_exp_1_op         : 197
rel_exp_op           : 191
rel_expression       : 184 192 193
rel_expression_1     : 191 198 199 200 201
ret_val              : 179
return               : 148
statement            : 142
term                 : 205 212 213 214
term_op              : 211
this                 : 75 149 239
type                 : 43 56 106 120
var_cte              : 238
var_decl             : 15 150
vars                 : 9
vars_assgn           : 47
vars_tp_a            : 43
vars_tp_b            : 44
vars_type            : 42
vec_assgn            : 59
vec_elem             : 87 91
vec_mat_type         : 59 64
vec_more             : 88
vec_object           : 88
vector               : 10
vector_exp           : 60 79 94
while_loop           : 162

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . np_program_0 program_class MAIN np_program_1 class_block np_program_2
    (6) np_program_0 -> .

    CLASS           reduce using rule 6 (np_program_0 -> .)
    MAIN            reduce using rule 6 (np_program_0 -> .)

    np_program_0                   shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> np_program_0 . program_class MAIN np_program_1 class_block np_program_2
    (2) program_class -> . CLASS ID np_program_1 prog_inh class_block program_class
    (3) program_class -> . empty
    (251) empty -> .

    CLASS           shift and go to state 3
    MAIN            reduce using rule 251 (empty -> .)

    program_class                  shift and go to state 4
    empty                          shift and go to state 5

state 2

    (0) S' -> program .



state 3

    (2) program_class -> CLASS . ID np_program_1 prog_inh class_block program_class

    ID              shift and go to state 6


state 4

    (1) program -> np_program_0 program_class . MAIN np_program_1 class_block np_program_2

    MAIN            shift and go to state 7


state 5

    (3) program_class -> empty .

    MAIN            reduce using rule 3 (program_class -> empty .)


state 6

    (2) program_class -> CLASS ID . np_program_1 prog_inh class_block program_class
    (7) np_program_1 -> .

    INHERITS        reduce using rule 7 (np_program_1 -> .)
    {               reduce using rule 7 (np_program_1 -> .)

    np_program_1                   shift and go to state 8

state 7

    (1) program -> np_program_0 program_class MAIN . np_program_1 class_block np_program_2
    (7) np_program_1 -> .

    {               reduce using rule 7 (np_program_1 -> .)

    np_program_1                   shift and go to state 9

state 8

    (2) program_class -> CLASS ID np_program_1 . prog_inh class_block program_class
    (4) prog_inh -> . INHERITS ID
    (5) prog_inh -> . empty
    (251) empty -> .

    INHERITS        shift and go to state 12
    {               reduce using rule 251 (empty -> .)

    empty                          shift and go to state 10
    prog_inh                       shift and go to state 11

state 9

    (1) program -> np_program_0 program_class MAIN np_program_1 . class_block np_program_2
    (12) class_block -> . { class_blck_body }

    {               shift and go to state 13

    class_block                    shift and go to state 14

state 10

    (5) prog_inh -> empty .

    {               reduce using rule 5 (prog_inh -> empty .)


state 11

    (2) program_class -> CLASS ID np_program_1 prog_inh . class_block program_class
    (12) class_block -> . { class_blck_body }

    {               shift and go to state 13

    class_block                    shift and go to state 15

state 12

    (4) prog_inh -> INHERITS . ID

    ID              shift and go to state 16


state 13

    (12) class_block -> { . class_blck_body }
    (13) class_blck_body -> . class_vars class_asgs class_func
    (14) class_blck_body -> . class_func
    (15) class_vars -> . access var_decl more_class_vars
    (20) class_func -> . method class_func
    (21) class_func -> . empty
    (22) access -> . acc_scope np_access_1 acc_dependent
    (102) method -> . func_spec ( np_method_5 opt_method_param ) np_method_6 block np_method_7
    (251) empty -> .
    (23) acc_scope -> . PUBLIC
    (24) acc_scope -> . PRIVATE
    (103) func_spec -> . method_access func_type ID np_method_4
    (104) func_spec -> . CONSTRUCTOR np_method_1
    (30) method_access -> . met_acc_scope np_method_access_1 met_acc_dependent
    (31) met_acc_scope -> . PUBLIC_FUNC
    (32) met_acc_scope -> . PRIVATE_FUNC

    }               reduce using rule 251 (empty -> .)
    PUBLIC          shift and go to state 17
    PRIVATE         shift and go to state 24
    CONSTRUCTOR     shift and go to state 18
    PUBLIC_FUNC     shift and go to state 25
    PRIVATE_FUNC    shift and go to state 31

    method                         shift and go to state 19
    empty                          shift and go to state 20
    class_func                     shift and go to state 21
    class_blck_body                shift and go to state 22
    access                         shift and go to state 23
    met_acc_scope                  shift and go to state 26
    method_access                  shift and go to state 27
    class_vars                     shift and go to state 28
    func_spec                      shift and go to state 29
    acc_scope                      shift and go to state 30

state 14

    (1) program -> np_program_0 program_class MAIN np_program_1 class_block . np_program_2
    (8) np_program_2 -> .

    $end            reduce using rule 8 (np_program_2 -> .)

    np_program_2                   shift and go to state 32

state 15

    (2) program_class -> CLASS ID np_program_1 prog_inh class_block . program_class
    (2) program_class -> . CLASS ID np_program_1 prog_inh class_block program_class
    (3) program_class -> . empty
    (251) empty -> .

    CLASS           shift and go to state 3
    MAIN            reduce using rule 251 (empty -> .)

    program_class                  shift and go to state 33
    empty                          shift and go to state 5

state 16

    (4) prog_inh -> INHERITS ID .

    {               reduce using rule 4 (prog_inh -> INHERITS ID .)


state 17

    (23) acc_scope -> PUBLIC .

    INDEPENDENT     reduce using rule 23 (acc_scope -> PUBLIC .)
    VAR             reduce using rule 23 (acc_scope -> PUBLIC .)
    VEC             reduce using rule 23 (acc_scope -> PUBLIC .)
    MAT             reduce using rule 23 (acc_scope -> PUBLIC .)


state 18

    (104) func_spec -> CONSTRUCTOR . np_method_1
    (108) np_method_1 -> .

    (               reduce using rule 108 (np_method_1 -> .)

    np_method_1                    shift and go to state 34

state 19

    (20) class_func -> method . class_func
    (20) class_func -> . method class_func
    (21) class_func -> . empty
    (102) method -> . func_spec ( np_method_5 opt_method_param ) np_method_6 block np_method_7
    (251) empty -> .
    (103) func_spec -> . method_access func_type ID np_method_4
    (104) func_spec -> . CONSTRUCTOR np_method_1
    (30) method_access -> . met_acc_scope np_method_access_1 met_acc_dependent
    (31) met_acc_scope -> . PUBLIC_FUNC
    (32) met_acc_scope -> . PRIVATE_FUNC

    }               reduce using rule 251 (empty -> .)
    CONSTRUCTOR     shift and go to state 18
    PUBLIC_FUNC     shift and go to state 25
    PRIVATE_FUNC    shift and go to state 31

    empty                          shift and go to state 20
    method                         shift and go to state 19
    class_func                     shift and go to state 35
    method_access                  shift and go to state 27
    func_spec                      shift and go to state 29
    met_acc_scope                  shift and go to state 26

state 20

    (21) class_func -> empty .

    }               reduce using rule 21 (class_func -> empty .)


state 21

    (14) class_blck_body -> class_func .

    }               reduce using rule 14 (class_blck_body -> class_func .)


state 22

    (12) class_block -> { class_blck_body . }

    }               shift and go to state 36


state 23

    (15) class_vars -> access . var_decl more_class_vars
    (9) var_decl -> . vars
    (10) var_decl -> . vector
    (11) var_decl -> . matrix
    (42) vars -> . VAR ids : vars_type ; np_vars_3
    (59) vector -> . VEC ids : vec_mat_type [ CONST_I ] np_vector_1 vec_assgn ; np_vector_2
    (64) matrix -> . MAT ids : vec_mat_type [ CONST_I , CONST_I ] np_matrix_1 mat_assgn ; np_matrix_2

    VAR             shift and go to state 41
    VEC             shift and go to state 37
    MAT             shift and go to state 42

    vector                         shift and go to state 40
    matrix                         shift and go to state 38
    var_decl                       shift and go to state 39
    vars                           shift and go to state 43

state 24

    (24) acc_scope -> PRIVATE .

    INDEPENDENT     reduce using rule 24 (acc_scope -> PRIVATE .)
    VAR             reduce using rule 24 (acc_scope -> PRIVATE .)
    VEC             reduce using rule 24 (acc_scope -> PRIVATE .)
    MAT             reduce using rule 24 (acc_scope -> PRIVATE .)


state 25

    (31) met_acc_scope -> PUBLIC_FUNC .

    INDEPENDENT     reduce using rule 31 (met_acc_scope -> PUBLIC_FUNC .)
    VOID            reduce using rule 31 (met_acc_scope -> PUBLIC_FUNC .)
    ID              reduce using rule 31 (met_acc_scope -> PUBLIC_FUNC .)
    INT             reduce using rule 31 (met_acc_scope -> PUBLIC_FUNC .)
    DOUBLE          reduce using rule 31 (met_acc_scope -> PUBLIC_FUNC .)
    CHAR            reduce using rule 31 (met_acc_scope -> PUBLIC_FUNC .)
    BOOL            reduce using rule 31 (met_acc_scope -> PUBLIC_FUNC .)


state 26

    (30) method_access -> met_acc_scope . np_method_access_1 met_acc_dependent
    (35) np_method_access_1 -> .

    INDEPENDENT     reduce using rule 35 (np_method_access_1 -> .)
    VOID            reduce using rule 35 (np_method_access_1 -> .)
    ID              reduce using rule 35 (np_method_access_1 -> .)
    INT             reduce using rule 35 (np_method_access_1 -> .)
    DOUBLE          reduce using rule 35 (np_method_access_1 -> .)
    CHAR            reduce using rule 35 (np_method_access_1 -> .)
    BOOL            reduce using rule 35 (np_method_access_1 -> .)

    np_method_access_1             shift and go to state 44

state 27

    (103) func_spec -> method_access . func_type ID np_method_4
    (105) func_type -> . VOID np_method_2
    (106) func_type -> . type
    (107) func_type -> . ID np_method_3
    (218) type -> . INT np_type_1
    (219) type -> . DOUBLE np_type_1
    (220) type -> . CHAR np_type_1
    (221) type -> . BOOL np_type_1

    VOID            shift and go to state 50
    ID              shift and go to state 52
    INT             shift and go to state 46
    DOUBLE          shift and go to state 47
    CHAR            shift and go to state 45
    BOOL            shift and go to state 48

    type                           shift and go to state 49
    func_type                      shift and go to state 51

state 28

    (13) class_blck_body -> class_vars . class_asgs class_func
    (18) class_asgs -> . assignment class_asgs
    (19) class_asgs -> . empty
    (75) assignment -> . this ID np_assignment_1 id_access = np_assignment_2 ass_value ;
    (251) empty -> .
    (83) this -> . THIS np_this_1 .
    (84) this -> . np_this_2
    (86) np_this_2 -> .

    CONSTRUCTOR     reduce using rule 251 (empty -> .)
    PUBLIC_FUNC     reduce using rule 251 (empty -> .)
    PRIVATE_FUNC    reduce using rule 251 (empty -> .)
    }               reduce using rule 251 (empty -> .)
    THIS            shift and go to state 54
    ID              reduce using rule 86 (np_this_2 -> .)

    assignment                     shift and go to state 53
    this                           shift and go to state 55
    np_this_2                      shift and go to state 56
    empty                          shift and go to state 57
    class_asgs                     shift and go to state 58

state 29

    (102) method -> func_spec . ( np_method_5 opt_method_param ) np_method_6 block np_method_7

    (               shift and go to state 59


state 30

    (22) access -> acc_scope . np_access_1 acc_dependent
    (27) np_access_1 -> .

    INDEPENDENT     reduce using rule 27 (np_access_1 -> .)
    VAR             reduce using rule 27 (np_access_1 -> .)
    VEC             reduce using rule 27 (np_access_1 -> .)
    MAT             reduce using rule 27 (np_access_1 -> .)

    np_access_1                    shift and go to state 60

state 31

    (32) met_acc_scope -> PRIVATE_FUNC .

    INDEPENDENT     reduce using rule 32 (met_acc_scope -> PRIVATE_FUNC .)
    VOID            reduce using rule 32 (met_acc_scope -> PRIVATE_FUNC .)
    ID              reduce using rule 32 (met_acc_scope -> PRIVATE_FUNC .)
    INT             reduce using rule 32 (met_acc_scope -> PRIVATE_FUNC .)
    DOUBLE          reduce using rule 32 (met_acc_scope -> PRIVATE_FUNC .)
    CHAR            reduce using rule 32 (met_acc_scope -> PRIVATE_FUNC .)
    BOOL            reduce using rule 32 (met_acc_scope -> PRIVATE_FUNC .)


state 32

    (1) program -> np_program_0 program_class MAIN np_program_1 class_block np_program_2 .

    $end            reduce using rule 1 (program -> np_program_0 program_class MAIN np_program_1 class_block np_program_2 .)


state 33

    (2) program_class -> CLASS ID np_program_1 prog_inh class_block program_class .

    MAIN            reduce using rule 2 (program_class -> CLASS ID np_program_1 prog_inh class_block program_class .)


state 34

    (104) func_spec -> CONSTRUCTOR np_method_1 .

    (               reduce using rule 104 (func_spec -> CONSTRUCTOR np_method_1 .)


state 35

    (20) class_func -> method class_func .

    }               reduce using rule 20 (class_func -> method class_func .)


state 36

    (12) class_block -> { class_blck_body } .

    CLASS           reduce using rule 12 (class_block -> { class_blck_body } .)
    MAIN            reduce using rule 12 (class_block -> { class_blck_body } .)
    $end            reduce using rule 12 (class_block -> { class_blck_body } .)


state 37

    (59) vector -> VEC . ids : vec_mat_type [ CONST_I ] np_vector_1 vec_assgn ; np_vector_2
    (38) ids -> . ID np_ids_1 m_ids

    ID              shift and go to state 62

    ids                            shift and go to state 61

state 38

    (11) var_decl -> matrix .

    PUBLIC          reduce using rule 11 (var_decl -> matrix .)
    PRIVATE         reduce using rule 11 (var_decl -> matrix .)
    THIS            reduce using rule 11 (var_decl -> matrix .)
    CONSTRUCTOR     reduce using rule 11 (var_decl -> matrix .)
    PUBLIC_FUNC     reduce using rule 11 (var_decl -> matrix .)
    PRIVATE_FUNC    reduce using rule 11 (var_decl -> matrix .)
    ID              reduce using rule 11 (var_decl -> matrix .)
    }               reduce using rule 11 (var_decl -> matrix .)
    IF              reduce using rule 11 (var_decl -> matrix .)
    PRINT           reduce using rule 11 (var_decl -> matrix .)
    SCAN            reduce using rule 11 (var_decl -> matrix .)
    RETURN          reduce using rule 11 (var_decl -> matrix .)
    FOR             reduce using rule 11 (var_decl -> matrix .)
    WHILE           reduce using rule 11 (var_decl -> matrix .)
    VAR             reduce using rule 11 (var_decl -> matrix .)
    VEC             reduce using rule 11 (var_decl -> matrix .)
    MAT             reduce using rule 11 (var_decl -> matrix .)


state 39

    (15) class_vars -> access var_decl . more_class_vars
    (16) more_class_vars -> . class_vars
    (17) more_class_vars -> . empty
    (15) class_vars -> . access var_decl more_class_vars
    (251) empty -> .
    (22) access -> . acc_scope np_access_1 acc_dependent
    (23) acc_scope -> . PUBLIC
    (24) acc_scope -> . PRIVATE

    THIS            reduce using rule 251 (empty -> .)
    CONSTRUCTOR     reduce using rule 251 (empty -> .)
    PUBLIC_FUNC     reduce using rule 251 (empty -> .)
    PRIVATE_FUNC    reduce using rule 251 (empty -> .)
    ID              reduce using rule 251 (empty -> .)
    }               reduce using rule 251 (empty -> .)
    PUBLIC          shift and go to state 17
    PRIVATE         shift and go to state 24

    access                         shift and go to state 23
    class_vars                     shift and go to state 63
    empty                          shift and go to state 64
    acc_scope                      shift and go to state 30
    more_class_vars                shift and go to state 65

state 40
